# ragXplorer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.yaml
notebooks/: 01_basic_rag_pipeline.ipynb  02_vector_db_comparision.ipynb  03_llm_comparision.ipynb  04_evaluation_ragas.ipynb
rag_utils/: __init__.py  chunking.py  embeddings.py  evaluation.py  indexing.py  ingestion.py  llm_integration.py  memory.py  retrieval.py
